# Voronoi

./: CMakeLists.txt  README.md
include/voronoi/: Cell.hpp  DataProvider.h
src/app/: voronoi.cpp
src/proto/: Base.py  BlendGLWidget.py  BlendTest.py  MyGeom.py  ProjectorList.py  Shader.py  ShaderGLWidget.py  ShaderTest.py  Texture.py  WarpGLWidget.py  WarpTest.py  stitch.py
src/proto/shaders/: canvas.h  cylindrical.h  direction.h
